# secret-santa

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  package.json
css/: style.css
img/.comments/: background.jpg.xml
sass/: style.sass
src/: main.rs
templates/: 500.html.tera  app.html.tera  draft.html.tera  draft_insertion.html.tera  draft_not_found.html.tera  index.html.tera  ticket.html.tera  ticket_not_found.html.tera
