[package]
name = "weihnachts-wichtel"
version = "0.1.0"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["tera_templates", "serve", "json"]